@@ -1,3 +1,12 @@
+2006-03-15 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/Partition.h,
+	  src/Dialog_Partition_Info.cc,
+	  src/GParted_Core.cc,
+	  src/Partition.cc,
+	  src/TreeView_Detail.cc,
+	  src/Win_GParted.cc: Made Partition::mountpoints private
+	  
 2006-03-14 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* changed the way devices and partitions store their devicepaths.
